@@ -1,0 +1,30 @@
+/* Full-screen black loading page */
+.jm-loading-page{
+  position:fixed;
+  left:0;top:0;right:0;bottom:0;
+  background:#000;
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+  opacity:1;
+  transition:opacity .6s ease, visibility .6s ease;
+  visibility:visible;
+}
+.jm-loading-page.jm-hidden{
+  opacity:0;
+  visibility:hidden;
+  pointer-events:none;
+}
+.jm-loading-inner{
+  text-align:center;
+}
+.jm-loading-text{
+  font-size:18px;
+  margin-bottom:12px;
+}
+.jm-loading-percent{
+  font-size:42px;
+  font-weight:700;
+}
